--- a/trAssist/Views/Shared/_Layout.cshtml
+++ b/trAssist/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="~/images/favicon.ico" type="image/ico" />
-    <title>@ViewData["Title"] - trAssist</title>
+    <title>@ViewData["Title"] - GymTracker</title>
 
 
     <environment include="Development">
@@ -39,7 +39,7 @@
                         <a class="site_title" asp-controller="Home" asp-action="Index">
                             @*<i class="fa fa-gg"></i>*@
                             <img src="~/images/logo.png" height="45">
-                            <span>trAssist</span>
+                            <span>GymTracker</span>
                         </a>
                     </div>
 
@@ -203,7 +203,7 @@
 
             <footer>
                 <div class="pull-right">
-                    &copy; 2018 - trAssist
+                    &copy; 2018 - GymTracker
                     Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
                 </div>
             </footer>
@@ -211,7 +211,6 @@
     </div>
 
     <environment include="Development">
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!-- jQuery -->
         <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
