--- a/trAssist/Views/Account/Login.cshtml
+++ b/trAssist/Views/Account/Login.cshtml
@@ -48,17 +48,15 @@
             @* BackGround: style="background-image: url('@Url.Content("~/images/bg-01.jpg")');" *@
             <div class="wrap-login100">
                 <form asp-route-returnurl="@ViewData["ReturnUrl"]" class="login100-form validate-form" method="post">
-                    <span class="login100-form-title p-b-26">
-                        Log in
-                    </span>
-
                     <a asp-controller="Home" asp-action="Index">
-                        <span class="login100-form-title p-b-48">
+                        <span class="login100-form-title p-b-20">
                             @*<i class="fa fa-paw"></i>*@
-                            <img src="~/images/logo1.png" height="60">
+                            <img src="~/images/logo.png" height="100">
                         </span>
                     </a>
-
+                    <span class="login100-form-title p-b-20">
+                        Log in
+                    </span>
                     <div asp-validation-summary="All" class="text-danger"></div>
 
                     <div class="wrap-input100 validate-input" data-validate="Enter email address">
