--- a/trAssist/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/trAssist/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,90 @@
 ﻿@{
-    ViewData["Title"] = "Reset password confirmation";
+    Layout = null;
+    ViewData["Title"] = "Reset Password Confirmation";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="~/images/logo.png" type="image/ico" />
+    <title> GymTracker Reset Password Confirmation </title>
+    <environment include="Development">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/bootstrap/css/bootstrap.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/fonts/iconic/css/material-design-iconic-font.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/animate/animate.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/css-hamburgers/hamburgers.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/animsition/css/animsition.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/select2/select2.min.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/vendor/daterangepicker/daterangepicker.css">
+        <!--===============================================================================================-->
+        <link rel="stylesheet" type="text/css" href="~/login/css/util.css">
+        <link rel="stylesheet" type="text/css" href="~/login/css/main.css">
+        <!--===============================================================================================-->
+    </environment>
+</head>
+<body>
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <a asp-controller="Home" asp-action="Index">
+                    <span class="login100-form-title p-b-20">
+                        <img src="~/images/logo.png" height="100">
+                    </span>
+                </a>
+                <span class="login100-form-title p-b-20">
+                    @ViewData["Title"]
+                </span>
+                <p class="text-center spacer-t20 spacer-b30 pt20">
+                    Your password has been reset.
+                </p>
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Your password has been reset. Please <a asp-action="Login">click here to log in</a>.
-</p>
+                <div class="container-login100-form-btn">
+                    <div class="wrap-login100-form-btn">
+                        <div class="login100-form-bgbtn"></div>
+                        <a asp-action="Login" class="login100-form-btn">Login</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="pull-right">
+            <p>©2018 All Rights Reserved by Colorlib</p>
+        </div>
+    </div>
+
+    <div id="dropDownSelect1"></div>
+
+    @section Scripts {
+        @await Html.PartialAsync("_ValidationScriptsPartial")
+    }
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/jquery/jquery-3.2.1.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/animsition/js/animsition.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/bootstrap/js/popper.min.js"></script>
+    <script src="~/login/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/select2/select2.min.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/daterangepicker/moment.min.js"></script>
+    <script src="~/login/vendor/daterangepicker/daterangepicker.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/vendor/countdowntime/countdowntime.js"></script>
+    <!--===============================================================================================-->
+    <script src="~/login/js/main.js"></script>
+</body>
+</html>
