--- a/trAssist/Views/Account/AccessDenied.cshtml
+++ b/trAssist/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,20 @@
 ﻿@{
-    ViewData["Title"] = "Access denied";
+    ViewData["Title"] = "Access Denied";
 }
-
-<header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+    <div class="container body">
+        <div class="main_container">
+            <!-- page content -->
+            <div class="col-md-12 center-margin">
+                <div class="col-middle">
+                    <div class="text-center text-center">
+                        <h1 class="error-number">403</h1>
+                        <h2>Access denied</h2>
+                        <p>
+                            You do not have access to this resource.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- /page content -->
+        </div>
+    </div>
