--- a/trAssist/Views/Account/Register.cshtml
+++ b/trAssist/Views/Account/Register.cshtml
@@ -12,6 +12,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="~/images/logo.png" type="image/ico" />
     <title> GymTracker Login </title>
     <environment include="Development">
         <!--===============================================================================================-->
