--- a/trAssist/Views/Shared/_Layout.cshtml
+++ b/trAssist/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="~/images/favicon.ico" type="image/ico" />
+    <link rel="icon" href="~/images/logo.png" type="image/ico" />
     <title>@ViewData["Title"] - GymTracker</title>
 
 
