--- a/trAssist/wwwroot/login/css/main.css
+++ b/trAssist/wwwroot/login/css/main.css
@@ -59,14 +59,14 @@ a:focus {
 	outline: none !important;
 }
 
-a:hover {
-	text-decoration: none;
-  color: #6a7dfe;
-  color: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  color: -o-linear-gradient(left, #21d4fd, #b721ff);
-  color: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  color: linear-gradient(left, #21d4fd, #b721ff);
-}
+    a:hover {
+        text-decoration: none;
+        color: #ffffff;
+        color: -webkit-linear-gradient(left, #21d4fd, #b721ff);
+        color: -o-linear-gradient(left, #21d4fd, #b721ff);
+        color: -moz-linear-gradient(left, #21d4fd, #b721ff);
+        color: linear-gradient(left, #21d4fd, #b721ff);
+    }
 
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
@@ -245,26 +245,24 @@ iframe {
   pointer-events: none;
 }
 
-.focus-input100::before {
-  content: "";
-  display: block;
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 0;
-  height: 2px;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
-
-  background: #6a7dfe;
-  background: -webkit-linear-gradient(left, #21d4fd, #b721ff);
-  background: -o-linear-gradient(left, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(left, #21d4fd, #b721ff);
-  background: linear-gradient(left, #21d4fd, #b721ff);
-}
+    .focus-input100::before {
+        content: "";
+        display: block;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        -webkit-transition: all 0.4s;
+        -o-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+        transition: all 0.4s;
+        background: #6a7dfe;
+        background: -webkit-linear-gradient(left, #c33432, #553937);
+        background: -o-linear-gradient(left, #c33432, #553937);
+        background: -moz-linear-gradient(left, #c33432, #553937);
+        background: linear-gradient(left, #c33432, #553937);
+    }
 
 .focus-input100::after {
   font-family: Poppins-Regular;
@@ -367,22 +365,21 @@ iframe {
 }
 
 .login100-form-bgbtn {
-  position: absolute;
-  z-index: -1;
-  width: 300%;
-  height: 100%;
-  background: #a64bf4;
-  background: -webkit-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: -o-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: -moz-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  background: linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff);
-  top: 0;
-  left: -100%;
-
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  transition: all 0.4s;
+    position: absolute;
+    z-index: -1;
+    width: 300%;
+    height: 100%;
+    background: #a64bf4;
+    background: -webkit-linear-gradient(right, #c33432, #553937, #c33432, #553937);
+    background: -o-linear-gradient(right, #c33432, #553937, #c33432, #553937);
+    background: -moz-linear-gradient(right, #c33432, #553937, #c33432, #553937);
+    background: linear-gradient(right, #c33432, #553937, #c33432, #553937);
+    top: 0;
+    left: -100%;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
 .login100-form-btn {
