--- a/trAssist/Views/Home/Exercises.cshtml
+++ b/trAssist/Views/Home/Exercises.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="x_content">
             <p class="text-muted font-13 m-b-30">
-                Responsive is an extension for DataTables that resolves that problem by optimising the table's layout for different screen sizes through the dynamic insertion and removal of columns from the table.
+                Responsive is a extension for DataTables that resolves that problem by optimising the table's layout for different screen sizes through the dynamic insertion and removal of columns from the table.
             </p>
             <table id="datatable-buttons" class="table table-striped table-bordered">
                 <thead>
