--- a/GymTracker/Views/_ViewImports.cshtml
+++ b/GymTracker/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
-@using GymTracker
 @using GymTracker.Models
 @using GymTracker.Models.AccountViewModels
 @using GymTracker.Models.ManageViewModels
+@using GymTracker.Models.TraineeViewModels
+@using GymTracker.Models.TrainerViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
