--- a/GymTracker/Views/Home/EditTrainee.cshtml
+++ b/GymTracker/Views/Home/EditTrainee.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model EditTraineeViewModel
+@{
     ViewData["Title"] = "Edit Trainee Information";
 }
 
@@ -11,36 +12,36 @@
         <br />
         <form id="edit-trainee" data-parsley-validate class="form-horizontal form-label-left">
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Name">
                     Name <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" id="first-name" required="required" value="John" class="form-control col-md-7 col-xs-12">
+                    <input type="text" id="first-name" required="required" asp-for="Name" value="John" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="surname">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Surname">
                     Surname <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" id="surname" name="surname" required="required" value="Wick" class="form-control col-md-7 col-xs-12">
+                    <input type="text" id="surname" name="surname" asp-for="Surname" required="required" value="Wick" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Email">
                     Email <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" id="email" name="email" required="required" value="johnwick@gmail.com" class="form-control col-md-7 col-xs-12">
+                    <input type="text" id="email" name="email" asp-for="Email" required="required" value="johnwick@gmail.com" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="DateOfBirth">
                     Date Of Birth <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class='input-group date' id='myDatepicker2'>
-                        <input id="birthday" type='text' class="form-control" value="29-04-1983" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
+                        <input id="birthday" type="text" asp-for="DateOfBirth" class="form-control" value="29-04-1983" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
@@ -48,67 +49,88 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="image">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Image">
                     Image
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <img id="preview" style="height:100px;" src="~/images/user.png" alt="ProfileImage" />
-                    <input type="file" accept="image/*" id="image" name="image" class="form-control col-md-7 col-xs-12">
+                    <input type="file" accept="image/*" id="image" asp-for="Image" name="image" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Phone">
                     Phone
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="tel" id="phone" name="phone" class="form-control col-md-7 col-xs-12" value="555-555-5555" data-inputmask="'mask' : '(999) 999-9999'">
+                    <input type="tel" id="phone" name="phone" asp-for="Phone" class="form-control col-md-7 col-xs-12" value="@Model.Phone">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="weight">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Weight">
                     Weight
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="number" step="0.1" id="weight" name="weight" value="74.4" class="form-control col-md-7 col-xs-12">
+                    <input type="number" step="0.1" id="weight" name="weight" asp-for="Weight" value="74.4" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="height">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Height">
                     Height
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="number" id="height" name="height" value="186" class="form-control col-md-7 col-xs-12">
+                    <input type="number" id="height" name="height" asp-for="Height" value="186" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="fat-ratio">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="FatRatio">
                     Fat Ratio
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="number" step="0.01" id="fat-ratio" name="fat-ratio" value="21.39" class="form-control col-md-7 col-xs-12">
+                    <input type="number" step="0.01" id="FatRatio" name="FatRatio" asp-for="FatRatio" value="21.39" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="city">
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="City">
                     City
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" id="city" name="city" value="New York" class="form-control col-md-7 col-xs-12">
+                    <input type="text" id="city" name="city" asp-for="City" value="@Model.City" class="form-control col-md-7 col-xs-12">
                 </div>
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12">Gender</label>
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Gender">Gender</label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div id="gender" class="btn-group" data-toggle="buttons">
                         <label class="btn btn-default" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                            <input type="radio" name="gender" value="male" checked="checked"> &nbsp; Male &nbsp;
+                            <input type="radio" name="gender" value="male" asp-for="Gender" checked="checked"> &nbsp; Male &nbsp;
                         </label>
                         <label class="btn btn-primary" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default">
-                            <input type="radio" name="gender" value="female"> Female
+                            <input type="radio" name="gender" value="female" asp-for="Gender"> Female
                         </label>
                     </div>
                 </div>
             </div>
+            <!--    For toggle button in our case check gender value and set value of checked attribute of button according to this
+             public ActionResult CheckBoxTestAct()
+            {
+                CheckBoxViewModel vm1 = new CheckBoxViewModel();
+                vm1.TestValue = "AAA";
+                vm1.IsSelected = true;
+                return View(vm1);
+            }
+            [HttpPost]
+            public ActionResult CheckBoxTestAct(CheckBoxViewModel vm)
+            {
+                return View(vm);
+            }
+        View
+
+        <div class="col-md-10">
+            <input type="checkbox" name="IsSelected" checked="Model.IsSelected" data-toggle="toggle">
+        </div>
+
+
+    -->
             <div class="ln_solid"></div>
             <div class="form-group">
                 <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
