--- a/GymTracker/Views/Home/Exercises.cshtml
+++ b/GymTracker/Views/Home/Exercises.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ExercisesViewModel
+@{
     ViewData["Title"] = "Exercises";
 }
 <div class="x_panel">
@@ -15,296 +16,27 @@
             <thead>
                 <tr>
                     <th>Name</th>
+                    <th>Category</th>
                     <th>Calorie By Set</th>
                     <th>Gif/Picture</th>
                 </tr>
             </thead>
             <tbody>
+                @foreach (var ex in Model.Exercises)
+                {
                 <tr>
-                    <td>Tiger</td>
-                    <td>Nixon</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
+                    @{
+                        var base64 = Convert.ToBase64String(ex.GifPicture);
+                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                    }
+                    <td>@ex.Name</td>
+                    <td>@ex.Category</td>
+                    <td>@ex.CalorieBySet</td>
+                    <td>
+                        <img border=3 height=100 width=100 src="@imgSrc">
+                    </td>
                 </tr>
-                <tr>
-                    <td>Garrett</td>
-                    <td>Winters</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Ashton</td>
-                    <td>Cox</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Cedric</td>
-                    <td>Kelly</td>
-                    <td><img src="~/images/cropper.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Airi</td>
-                    <td>Satou</td>
-                    <td><img src="~/images/img.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Brielle</td>
-                    <td>Williamson</td>
-                    <td><img src="~/images/img.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Herrod</td>
-                    <td>Chandler</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Rhona</td>
-                    <td>Davidson</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Colleen</td>
-                    <td>Hurst</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Sonya</td>
-                    <td>Frost</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jena</td>
-                    <td>Gaines</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Quinn</td>
-                    <td>Flynn</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Charde</td>
-                    <td>Marshall</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Haley</td>
-                    <td>Kennedy</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Tatyana</td>
-                    <td>Fitzpatrick</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=100 width=100 /></td>
-                </tr>
-                <tr>
-                    <td>Michael</td>
-                    <td>Silva</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Paul</td>
-                    <td>Byrd</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Gloria</td>
-                    <td>Little</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Bradley</td>
-                    <td>Greer</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Dai</td>
-                    <td>Rios</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jenette</td>
-                    <td>Caldwell</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Yuri</td>
-                    <td>Berry</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Caesar</td>
-                    <td>Vance</td>
-                    <td><img src="~/images/img.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Doris</td>
-                    <td>Wilder</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Angelica</td>
-                    <td>Ramos</td>
-                    <td><img src="~/images/cropper.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Gavin</td>
-                    <td>Joyce</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jennifer</td>
-                    <td>Chang</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Brenden</td>
-                    <td>Wagner</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Fiona</td>
-                    <td>Green</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Shou</td>
-                    <td>Itou</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Michelle</td>
-                    <td>House</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Suki</td>
-                    <td>Burks</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Prescott</td>
-                    <td>Bartlett</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Gavin</td>
-                    <td>Cortez</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Martena</td>
-                    <td>Mccray</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Unity</td>
-                    <td>Butler</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Howard</td>
-                    <td>Hatfield</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Hope</td>
-                    <td>Fuentes</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Vivian</td>
-                    <td>Harrell</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Timothy</td>
-                    <td>Mooney</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jackson</td>
-                    <td>Bradshaw</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Olivia</td>
-                    <td>Liang</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Bruno</td>
-                    <td>Nash</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Sakura</td>
-                    <td>Yamamoto</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Thor</td>
-                    <td>Walton</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Finn</td>
-                    <td>Camacho</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Serge</td>
-                    <td>Baldwin</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Zenaida</td>
-                    <td>Frank</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Zorita</td>
-                    <td>Serrano</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jennifer</td>
-                    <td>Acosta</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Cara</td>
-                    <td>Stevens</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Hermione</td>
-                    <td>Butler</td>
-                    <td><img src="~/images/user.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Lael</td>
-                    <td>Greer</td>
-                    <td><img src="~/images/cropper.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Jonas</td>
-                    <td>Alexander</td>
-                    <td><img src="~/images/img.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Shad</td>
-                    <td>Decker</td>
-                    <td><img src="~/images/cropper.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Michael</td>
-                    <td>Bruce</td>
-                    <td><img src="~/images/img.jpg" alt="" border=3 height=50 width=50 /></td>
-                </tr>
-                <tr>
-                    <td>Donna</td>
-                    <td>Snider</td>
-                    <td><img src="~/images/img.png" alt="" border=3 height=50 width=50 /></td>
-                </tr>
+                }
             </tbody>
         </table>
     </div>
@@ -321,7 +53,7 @@
                 <div id="testmodal" style="padding: 5px 20px;">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Name">
                                 Name <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
@@ -329,28 +61,28 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="calorie">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Category">
+                                Category<span class="required">*</span>
+                            </label>
+                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                <input type="text" class="form-control col-md-7 col-xs-12" asp-for="Category" id="category" name="category">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="CalorieBySet">
                                 Calorie By Set <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input type="text" id="calorie" required="required" class="form-control col-md-7 col-xs-12">
+                                <input type="text" id="calorie" required="required" asp-for="CalorieBySet" class="form-control col-md-7 col-xs-12">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="category">
-                            Category<span class="required">*</span>
-                            </label>
-                            <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input type="text" class="form-control col-md-7 col-xs-12" id="category" name="category">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="image">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="GifPicture">
                                 Gif/Picture
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <img id="preview" style="height:100px;" src="~/images/user.png" alt="ProfileImage" />
-                                <input type="file" accept="image/*" size="100" id="image" name="image" class="form-control col-md-7 col-xs-12">
+                                <input type="file" accept="image/*" size="100" id="image" name="image" asp-for="GifPicture" class="form-control col-md-7 col-xs-12">
                             </div>
                         </div>
                     </form>
