Event add,delete and update added but for add the table modification must be applied to the project

--- a/GymTracker/Views/Home/NewTrainee.cshtml
+++ b/GymTracker/Views/Home/NewTrainee.cshtml
@@ -40,8 +40,9 @@
                     Date Of Birth <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class='input-group date' id='myDatepicker'>
-                        <input id="birthday" type='text' class="form-control" asp-for="DateOfBirth" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
+                    <div class='input-group date' id='
+                         '>
+                        <input id="birthday" type='text' class="form-control" asp-for="DateOfBirth" data-inputmask="'mask': '99.99.9999'" placeholder="DD.MM.YYYY" required="required" />
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
