--- a/GymTracker/Views/Home/TraineeDetails.cshtml
+++ b/GymTracker/Views/Home/TraineeDetails.cshtml
@@ -387,7 +387,7 @@
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class='input-group date' id='myDatepicker2'>
-                                    <input id="goaldate" type='text' class="form-control" asp-for="GoalDate" value="@Model.GoalDate" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
+                                    <input id="goaldate" type='text' class="form-control" asp-for="GoalDate" value="@Model.GoalDate" data-inputmask="'mask': '99.99.9999'" placeholder="DD.MM.YYYY" required="required" />
                                     <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
                                     </span>
