--- a/GymTracker/Views/Home/EditTrainee.cshtml
+++ b/GymTracker/Views/Home/EditTrainee.cshtml
@@ -41,7 +41,7 @@
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class='input-group date' id='myDatepicker2'>
-                        <input id="birthday" type="text" asp-for="DateOfBirth" class="form-control" value="29-04-1983" data-inputmask="'mask': '99/99/9999'" placeholder="DD/MM/YYYY" required="required" />
+                        <input id="birthday" type="text" asp-for="DateOfBirth" class="form-control" value="29-04-1983" data-inputmask="'mask': '99.99.9999'" placeholder="DD.MM.YYYY" required="required" />
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
                         </span>
