--- a/GymTracker/Views/Shared/_Layout.cshtml
+++ b/GymTracker/Views/Shared/_Layout.cshtml
@@ -187,10 +187,18 @@
             $('#myDatepicker2').datetimepicker({
                 format: 'DD.MM.YYYY'
             });
-            $('#myDatepicker3').datetimepicker();
-            $('#myDatepicker4').datetimepicker();
-            $('#myDatepicker5').datetimepicker();
-            $('#myDatepicker6').datetimepicker();
+            $('#myDatepicker3').datetimepicker({
+                format: 'DD.MM.YYYY hh:mm a'
+            });
+            $('#myDatepicker4').datetimepicker({
+                format: 'DD.MM.YYYY hh:mm a'
+            });
+            $('#myDatepicker5').datetimepicker({
+                format: 'DD.MM.YYYY hh:mm a'
+            });
+            $('#myDatepicker6').datetimepicker({
+                format: 'DD.MM.YYYY hh:mm a'
+            });
         </script>
         <!--Datatables-->
         @*<script src="~/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
