--- a/GymTracker/Views/Home/Exercises.cshtml
+++ b/GymTracker/Views/Home/Exercises.cshtml
@@ -26,8 +26,7 @@
                 {
                 <tr>
                     @{
-                        var base64 = Convert.ToBase64String(ex.GifPicture);
-                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                        var imgSrc = ex.GifPicture;
                     }
                     <td>@ex.Name</td>
                     <td>@ex.Category</td>
