--- a/GymTracker/Views/Home/Trainees.cshtml
+++ b/GymTracker/Views/Home/Trainees.cshtml
@@ -35,11 +35,10 @@
                 {
                     <tr onclick="location.href='@(Url.Action("TraineeDetails", "Home", new { traineeId = trainee.TraineeId }))">
                         @{
-                            var base64 = Convert.ToBase64String(trainee.Picture);
-                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                            var imgSrc = trainee.Picture;
                         }
                         <td>
-                            @*<img border=3 height=100 width=100 src="@imgSrc">*@
+                            <img border=3 height=100 width=100 src="~/../@imgSrc">
                         </td>
                         <td>@trainee.Name</td>
                         <td>@trainee.Surname</td>
