--- a/GymTracker/Views/Home/Index.cshtml
+++ b/GymTracker/Views/Home/Index.cshtml
@@ -160,5 +160,5 @@
     <script>
         var eventList = '@Model.jsonEvents';
     </script>
-    <script src="~/js/custom.js" charset="utf-8"></script>
+    <script src="~/js/initCalendar.js" charset="utf-8"></script>
 }
